wf-details: fix broken ui when workflow names are long
closes #464

--- a/reana-ui/src/pages/workflowDetails/components/WorkflowInfo.module.scss
+++ b/reana-ui/src/pages/workflowDetails/components/WorkflowInfo.module.scss
@@ -19,9 +19,11 @@
     display: flex;
     justify-content: space-between;
     padding-bottom: 1em;
+    flex-shrink: 0;
 
-    .first-row {
-      height: 25px;
+    .details-box {
+      display: flex;
+      align-items: baseline;
     }
   }
 
@@ -56,7 +58,6 @@
   }
 
   .notebook {
-    font-size: 0.85em;
     margin-left: 1em;
     margin: 0.7em;
   }
